--- a/main/static/main/main.css
+++ b/main/static/main/main.css
@@ -47,15 +47,7 @@ body {
   }
 
 
-.content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 30px;
-    padding: 30px;
-}
-
-.category_content {
+.category_content, .content {
     display: flex;
     flex-wrap: nowrap;          /* 🔥 НЕ переносимо ряд */
     justify-content: center;
