--- a/main/templates/main/dad.html
+++ b/main/templates/main/dad.html
@@ -5,6 +5,7 @@
   <title>!</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'main/main.css' %}">
+  <script src="{% static 'main/main.js' %}"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -12,8 +13,13 @@
   <main>
     <div>
       <div class="hats">
+          <a href="{% url 'home' %}" style="color:#bbaf30; text-decoration:none;">
           <img class="hats_img_logo" src="/media/img/4.jpeg" alt="home TV">
-          <h2>ForestPLANTS</h2>
+          </a>
+          <a href="{% url 'home' %}" style="color:#bbaf30; text-decoration:none;">
+            <h2>ForestPLANTS</h2>
+          </a>
+          
           <div class="link">
             <div class="icon">
               <a href="#" style="color:#fff; text-decoration:none;">
@@ -43,6 +49,7 @@
           </div>
       </div>
     {% block body %}{% endblock %}
+  </main>
     <footer class="footer">
       <div class="footer-content">
         <div class="footer-left">
@@ -81,7 +88,7 @@
         </div>
       </div>
     </footer>
-  </main>
+
 </div>
 </body>
 </html>
