--- a/main/static/main/main.css
+++ b/main/static/main/main.css
@@ -50,21 +50,15 @@ main {
 @media (max-width: 600px) {
     /* --- Телефонна версія: шапка --- */
     .hats {
-        flex-direction: row;
-        justify-content: space-between;
-        padding: 0px;
-        gap: 0px;
         border-radius: 0 0 32px 32px;
-        min-height: 0px;
+        padding: 0px 20px;
     }
     .hats h2{
         font-family: serif;
         font-size: 1.3rem;
-        margin: 0 0 0 10px;
     }
     .hats_img_logo{
-        width: 46px;
-        height: 46px;
+        width: 80px;
         object-fit: cover;
         border-radius: 100px;
         background-color: transparent;
@@ -256,9 +250,7 @@ main {
 
 .product-detail-img {
     width: 600px;
-    height: 600px;
-    max-width: 100vw;
-    max-height: 70vw;
+    height: 700px;
     object-fit: cover;
     border-radius: 30px;
     margin-right: 30px;
@@ -293,11 +285,9 @@ main {
         min-height: unset;
     }
     .product-detail-img {
-        width: 95vw;
-        height: 60vw;
-        max-width: 360px;
-        max-height: 360px;
-        margin-right: 0;
+        max-width: 350px;
+        max-height: 450px;
+        border-radius: 15px;
     }
 }
 @media (max-width: 600px) {
@@ -308,10 +298,8 @@ main {
         padding: 6px;
     }
     .product-detail-img {
-        width: 96vw;
-        height: 56vw;
-        max-width: 210px;
-        max-height: 210px;
+        max-width: 350px;
+        max-height: 450px;
         border-radius: 15px;
     }
     .product-info{
