--- a/staticfiles/main/main.css
+++ b/staticfiles/main/main.css
@@ -50,21 +50,15 @@ main {
 @media (max-width: 600px) {
     /* --- Телефонна версія: шапка --- */
     .hats {
-        flex-direction: row;
-        justify-content: space-between;
-        padding: 0px;
-        gap: 0px;
         border-radius: 0 0 32px 32px;
-        min-height: 0px;
+        padding: 10px 20px;
     }
     .hats h2{
         font-family: serif;
-        font-size: 1.3rem;
-        margin: 0 0 0 10px;
+        font-size: 1.8rem;
     }
     .hats_img_logo{
-        width: 46px;
-        height: 46px;
+        width: 100px;
         object-fit: cover;
         border-radius: 100px;
         background-color: transparent;
@@ -109,7 +103,7 @@ main {
     flex-wrap: nowrap;
     justify-content: center;
     gap: 15px;
-    width: 1430px;
+    width: 95%;
     margin: 0 auto;
 }
 
@@ -196,53 +190,8 @@ main {
         height: 210px;
         margin: 8px 0;
     }
-    .category_content:hover .content_item,
-    .category_content .content_item:hover {
-        width: 95vw;
-        z-index: initial;
-    }
 }
 
-@media (max-width: 600px) {
-    .category_content, .content {
-        width: 100vw;
-        max-width: 100vw;
-        justify-content: flex-start;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        overflow-x: unset;
-        gap: 8px;
-        margin: 0;
-        padding: 0 2vw;
-        scrollbar-width: thin;
-    }
-    .content_item {
-        min-width: unset;
-        max-width: 98vw;
-        width: 98vw;
-        height: 160px;
-        border-radius: 13px;
-        margin: 6px 0;
-    }
-    .category_content:hover .content_item,
-    .category_content .content_item:hover {
-        width: 98vw;
-        z-index: initial;
-    }
-    .content_item img,
-    .content_img {
-        width: 100%!important;
-        height: 100%!important;
-        object-fit: cover;
-        border-radius: 13px;
-        min-width: unset;
-        min-height: unset;
-    }
-    .overlay_text {
-        font-size: 1.1rem;
-        padding: 0 6px;
-    }
-}
 
 /* --- ДЕТАЛІ ТОВАРУ: без змін, лише дрібна адаптація --- */
 .product-detail {
@@ -256,9 +205,7 @@ main {
 
 .product-detail-img {
     width: 600px;
-    height: 600px;
-    max-width: 100vw;
-    max-height: 70vw;
+    height: 700px;
     object-fit: cover;
     border-radius: 30px;
     margin-right: 30px;
@@ -293,11 +240,9 @@ main {
         min-height: unset;
     }
     .product-detail-img {
-        width: 95vw;
-        height: 60vw;
-        max-width: 360px;
-        max-height: 360px;
-        margin-right: 0;
+        max-width: 350px;
+        max-height: 450px;
+        border-radius: 15px;
     }
 }
 @media (max-width: 600px) {
@@ -308,10 +253,8 @@ main {
         padding: 6px;
     }
     .product-detail-img {
-        width: 96vw;
-        height: 56vw;
-        max-width: 210px;
-        max-height: 210px;
+        max-width: 350px;
+        max-height: 450px;
         border-radius: 15px;
     }
     .product-info{
