--- a/staticfiles/main/main.css
+++ b/staticfiles/main/main.css
@@ -101,10 +101,12 @@ main {
 .category_content, .content {
     display: flex;
     flex-wrap: nowrap;
-    justify-content: center;
     gap: 15px;
     width: 95%;
     margin: 0 auto;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Всі картки зменшуються, коли наводиш на контейнер */
@@ -143,12 +145,30 @@ main {
     flex-shrink: 0;
 }
 
+.content_item {
+    position: relative;
+    /* решта стилів далі в CSS */
+}
 .content_item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     pointer-events: none;
     border-radius: 30px;
+    filter: grayscale(0.45) brightness(0.92) saturate(0.7);
+    /* сіро-прозора вуаль зверху */
+}
+.content_item img::after {
+    content: '';
+    position: absolute;
+    left: 0; top: 0; width: 100%; height: 100%;
+    background: rgba(205, 215, 220, 0.26);
+    border-radius: 30px;
+    pointer-events: none;
+    z-index: 2;
+    backdrop-filter: blur(8px) saturate(1.3);
+    -webkit-backdrop-filter: blur(8px) saturate(1.3);
+    /* Трохи білого міксу — матове скло */
 }
 
 .overlay_text {
@@ -187,7 +207,7 @@ main {
         min-width: unset;
         max-width: 95vw;
         width: 95vw;
-        height: 210px;
+        height: 310px;
         margin: 8px 0;
     }
 }
@@ -220,8 +240,21 @@ main {
     padding: 30px 80px;
     border-radius: 30px;
     min-width: 600px;
-    min-height: 600px;
-    max-width: 550px;
+    min-height: 700px;
+    max-width: 600px;
+}
+.product-detail-name {
+    font-size: 1.5rem;
+    text-align: center;
+}
+.product-info p {
+    font-size: 1.2rem;
+    text-align: justify;
+}
+.price {
+    font-size: 1.5rem;
+    text-align: right;
+    color: #2e3d2b;
 }
 .product-detail-name {
     margin-bottom: 18px;
@@ -249,22 +282,28 @@ main {
     .product-detail {
         flex-direction: column;
         align-items: center;
+        justify-content: center;
         gap: 14px;
         padding: 6px;
     }
     .product-detail-img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
         max-width: 350px;
         max-height: 450px;
         border-radius: 15px;
+        margin: 20px 0px 10px 0;
     }
     .product-info{
-        padding: 8px 8px 8px 8px;
+        padding: 25px;
+        margin: 10px 7px 20px 7px;
         border-radius: 11px;
         font-size: 0.9rem;
         min-width: unset;
         min-height: unset;
         max-width: 98vw;
-        box-shadow: 0 1.5px 4px rgba(0,0,0,0.12);
+        box-shadow: 0 1.5px 4px rgba(0, 0, 0, 0.36);
     }
 }
 
@@ -297,7 +336,9 @@ main {
         border-radius: 30px 30px 0 0;
     }
     .footer p {
-        font-size: 1rem;
+        text-align: left;
+        padding-left: 10px;
+        font-size: 1.3rem;
     }
     .footer-content {
         flex-direction: column;
