--- a/staticfiles/main/main.css
+++ b/staticfiles/main/main.css
@@ -19,7 +19,6 @@ main {
     padding: 10px 40px;
     align-items: center;
     gap: 24px;
-    box-shadow: 0 4px 16px rgba(255, 0, 0, 0.18);
     border-radius: 0 0 90px 90px;
 }
 .hats h2{
@@ -105,6 +104,7 @@ main {
     gap: 15px;
     width: 95%;
     margin: 0 auto;
+    padding: 10px;
 }
 
 /* Всі картки зменшуються, коли наводиш на контейнер */
@@ -155,6 +155,8 @@ main {
     border-radius: 30px;
     filter: grayscale(0.45) brightness(0.92) saturate(0.7);
     /* сіро-прозора вуаль зверху */
+    padding: 10px;
+    margin: 10px;
 }
 .content_item img::after {
     content: '';
